objects/System_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>max_quantity__c</fullName>
        <description>Maximum Quantity of applicable leads</description>
        <label>Maximum Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>no_subrules__c</fullName>
        <description>Counter for easier rule evaluation</description>
        <label>Number of subrules</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>parent_rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connection to System_Rule__c</description>
        <label>Parent Rule</label>
        <referenceTo>System_Rule__c</referenceTo>
        <relationshipLabel>System Rules</relationshipLabel>
        <relationshipName>System_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connection to System-product</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.sap_company_code__c</field>
                <operation>contains</operation>
                <valueField>$User.sap_company_code__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>System Rules</relationshipLabel>
        <relationshipName>System_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rule_field__c</fullName>
        <label>Rule Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>System_Pricing_Product_Matching_Fields</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rule_type__c</fullName>
        <description>Type of the rule / what is matched</description>
        <label>Rule type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product match</fullName>
                </value>
                <value>
                    <fullName>Product add</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rule_value__c</fullName>
        <description>Usually the lead type to be matched</description>
        <label>Rule Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>system_product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connection to resulting System product</description>
        <label>System</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>System Rules (System)</relationshipLabel>
        <relationshipName>System_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>System Rule</label>
    <listViews>
        <fullName>All_System_Rules</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All System Rules</label>
    </listViews>
    <listViews>
        <fullName>Main_Rules</fullName>
        <columns>Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>parent_rule__c</field>
            <operation>equals</operation>
        </filters>
        <label>Main Rules</label>
    </listViews>
    <nameField>
        <displayFormat>SysRule-{0000}</displayFormat>
        <label>System Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SubruleOrProductLinks</fullName>
        <active>true</active>
        <description>Either a System Rule Object is a Subrule (Parent rule must be filled) or a main rule (product and system product must be filled)</description>
        <errorConditionFormula>NOT(OR(
  AND(
    NOT(ISBLANK(product__c))
    ,NOT(ISBLANK(system_product__c))
    ,ISBLANK(parent_rule__c)
  ),
  AND(
    ISBLANK(product__c)
    ,ISBLANK(system_product__c)
    ,NOT(ISBLANK(parent_rule__c))
  )
))</errorConditionFormula>
        <errorDisplayField>product__c</errorDisplayField>
        <errorMessage>Either Product and System Product need to be filled or Parent Rule, but no combination of Parent Rule and a Product.</errorMessage>
    </validationRules>
</CustomObject>